--- a/Instance/public/index.html
+++ b/Instance/public/index.html
@@ -9,9 +9,23 @@
 </head>
 <body>
     <div class="container text-center mt-5">
-        <h1 class="display-4">Tiempo instancia</h1>
+        <h1 class="display-4">Tiempo Instancia</h1>
         <p class="lead">Identificación instancia: <span id="instance-info" class="fw-bold"></span></p>
+
+        <!-- Muestra el tiempo sincronizado -->
         <div id="time" class="display-3 text-primary">Loading...</div>
+
+        <h3 class="mt-5">Logs</h3>
+        <table class="table table-bordered table-striped mt-3" id="logs-table">
+            <thead>
+                <tr>
+                    <th>Timestamp</th>
+                    <th>Log Message</th>
+                </tr>
+            </thead>
+            <tbody id="logs-tbody">
+            </tbody>
+        </table>
     </div>
 
     <script src="/js/app.js"></script>
