--- a/Coordinator/public/index.html
+++ b/Coordinator/public/index.html
@@ -10,6 +10,7 @@
 <body class="bg-light">
   <div class="container mt-5">
     <h1 class="text-center">Panel Coordinador</h1>
+    <div id="clock" class="display-3 text-primary">Loading...</div>
     <div class="row my-3">
       <div class="col-md-6">
         <button id="launch-instance" class="btn btn-primary btn-block">Launch Instance</button>
